# build

./: README.md
ansible/: README.md
ansible/macosx/couchbase-mobile/: README  inventory  playbook.yml
ansible/windows/: ConfigureForAnsible.ps1  README.md  prep-for-ansible.sh
ansible/windows/couchbase-server/: README.md  extend-path.yml  install-kb.yml  install-vs.ps1  inventory  openssh.ps1  playbook.yml  prep-for-installer.yml  vs-unattended.xml
buildboard/: README.md  __init__.py  buildDB.py  buildHistory.py  buildboard.py  config.json  dashboard.py  runapps.py
buildboard/buildHistory/: __init__.py  views.py
buildboard/dashboard/: __init__.py  views.py
buildboard/docker/: Dockerfile  Dockerfile.patch  go  start-bb.sh  start-buildboard.sh  start-db.sh  start.sh
buildboard/docker/util/: bb_start.sh  httpd.conf
buildboard/html/: buildTable.css  buildboard.css  buildboard.html  service_down.html
buildboard/rest/: __init__.py  restapi.py
buildboard/static/: buildTable.css  buildboard.css
buildboard/templates/: base.html  buildDetails.html  buildHistory.html  build_template.html  dashboard.html
buildboard/util/: __init__.py  buildDB.new  buildDBI.new  buildDBI.py  buildHistory.py  dashboard.py
cbdeps/: CBDepsMacros.cmake  build-all-sherlock.sh
cbdeps/breakpad/: CMakeLists.txt
cbdeps/curl/: CMakeLists.txt
cbdeps/erlang/: CMakeLists.txt  bash_profile  erlang_windows_build.sh
cbdeps/icu4c/: CMakeLists.txt
cbdeps/jemalloc/: CMakeLists.txt
cbdeps/libevent/: CMakeLists.txt
cbdeps/libstdc++/: CMakeLists.txt
cbdeps/snappy/: CMakeLists.txt
cbdeps/utils/: GenericCopyCMakeLists.txt.in
cbdeps/v8/: CMakeLists.txt
cbdeps/windows/curl/: CMakeLists.txt  compile_curl.bat
docker/buildslaves/: rebuild_all_builddockers.sh  rebuild_jenkinsdockers.sh
docker/buildslaves/centos-58/: Dockerfile  go
docker/buildslaves/centos-63/: .gitignore  Dockerfile  go
docker/buildslaves/centos-64/: Dockerfile  go
docker/buildslaves/debian-7.6/: Dockerfile  go
docker/buildslaves/ubuntu-10.04/: .gitignore  Dockerfile  go  sources.list
docker/buildslaves/ubuntu-12.04/: go
docker/buildslaves/util/: couchbuilder_start.sh
docker/scripts/: clean_old_docker.sh  container-owner.py  restart_all_builddockers.sh  restart_all_sdk.sh  restart_all_sdk_new.sh  restart_all_watson.sh  restart_all_watson_mega1.sh  restart_all_watson_mega2.sh  restart_all_watson_mega3.sh  restart_analytics.sh  restart_ansible.sh  restart_builddocker.py  restart_clamav.sh  restart_cv_builders.sh  restart_docker_slave.sh  restart_docker_slave_server.sh  restart_everything.sh  restart_jenkinsdocker.py  restart_mobile.sh  restart_operator.sh  restart_suse.sh  restart_suse_2.sh  restart_swarmdocker.py  restart_testing_cv_builders.sh  restart_unit.sh  restart_zz_server_lightweight.sh  run_if_disk_full.sh  start_temp_buildboard.sh
docker/scripts/cv-ansible/: README  authorized_keys  ccache.conf  inventory  restart_cv_dockerslaves.sh  restart_cv_dockerslaves.yml  slave-setup.yml
gerrit/conf/: config
gerrit/cron/: crontab.txt  restart_gerrit
gerrit/hooks/: automerge  change-abandoned  change-merged  check-jira.py  check-jira_old.py  cla-signed  patchset-created  ref-updated  trivial-rebase.py
gerrit/review_site/etc/: gerrit.config
gerrit/review_site/plugins/: same-changeid.js
license/: README
license/couchbase-lite/: LICENSE_enterprise.txt
license/sync_gateway/: LICENSE_community.rtf  LICENSE_community.txt  LICENSE_enterprise.rtf
qualys/: file_delete_scan.xml  was-scan.py
scripts/cgi/: buildbotMapping.pm  buildbotQuery.pm  buildbotReports.pm  clientSideInclude.js  get_latest_good_build.pl  htmlReports.pm  jenkinsQuery.pm  jenkinsReports.pm  refresh_web_page.cgi  s3.cgi  s3_mobile.cgi  set_jenkins_default_param.pl  show_latest_and.cgi  show_latest_build.cgi  show_latest_commit_validation.cgi  show_latest_ios.cgi  show_latest_java.cgi  show_latest_query.cgi  show_latest_repo_build.cgi  show_latest_server.cgi  show_latest_sgw.cgi
scripts/codesign/: codesignApple.sh  codesignApple_cblitec.sh  codesignApple_sgw.sh  codesignApple_simple.sh
scripts/codesign/developer-tool-kit/: codesign_notarize_zip.sh  fix_path.sh
scripts/docs/client/: build-java-docs.sh  build-java-unified-docs.sh  build-ruby-docs.sh  build-sdk-docs-page.pl  build-spy-docs.sh  build-unified-java.sh
scripts/html/: buildbotstatus.html  buildbotstatus_181.html  buildbotstatus_211.html  buildbotstatus_220.html  buildbotstatus_250.html  buildbotstatus_251.html  buildbotstatus_252.html  buildbotstatus_300.html  buildbotstatus_301.html  buildbotstatus_302.html  buildbotstatus_master.html  commit_validation_status.html  dashboard.html  mobilestatus.html  mobilestatus_and.html  mobilestatus_ios.html  mobilestatus_java.html  mobilestatus_sgw_100.html  mobilestatus_sgw_101.html  mobilestatus_sgw_102.html  mobilestatus_sgw_103.html  mobilestatus_sgw_master.html  mybuildbotstatus.html  querystatus.html  s3.html
scripts/jenkins/: auto-release.sh  auto-staging.sh  auto-undo.sh  changelog-report.sh  merge-report.sh  mobile-release.sh  mobile-staging.sh  mobile-undo.sh  server-release.sh  server-staging.sh  server-undo.sh
scripts/jenkins/analytics/: analytics-build.sh  cbq-verify.sh
scripts/jenkins/backup/: backup-jenkins.sh  jenkins_backup_exclusions
scripts/jenkins/build_trigger/: server-windows-build.bat  server_buildbot_trigger.sh  single-repo-change.py
scripts/jenkins/commit_validation/: allcommits.py  alldependencies.py  allopenparents.py  archive_core_files.sh  checkout_dependencies.py  clang-tidy-diff.py  fetch_project.bat  fetch_project.sh  git-clang-format  remove_irrelevant_memcheck_results.py  single-project-cbnt  single-project-clang-format  single-project-clang-static-analyzer  single-project-clang-tidy  single-project-code-coverage  single-project-fuzztest  single-project-gerrit  single-project-gerrit-newpatch  single-project-gerrit-newpatch.bat  (+4 more)
scripts/release/: add_tag.sh  clean_old_nas.sh  create_tarball.sh  purge_jenkins_results.sh  upload_3x.sh  upload_4x.sh  upload_to_s3.sh
(+388 files in other folders)
